--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "npm": "^7.22.0",
-    "quasar": "^2.0.0"
+    "quasar": "^2.0.0",
+    "vue": "^3.2.11"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^3.0.0",
     "@types/node": "^12.20.21",
+    "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "@vue/cli-plugin-router": "~4.5.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0"
