--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "rick-and-morty-quasar",
-  "version": "0.0.1",
-  "description": "Vue3 (typescript) demo application with data from the Rick and Morty GraphQL API",
-  "productName": "Rick and Morty App",
-  "author": "Hamilton (hamiltonamx@gmail.com)",
-  "private": true,
-  "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
-  },
-  "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "npm": "^7.22.0",
-    "quasar": "^2.0.0",
-    "vue": "^3.2.11"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app": "^3.0.0",
-    "@types/node": "^12.20.21",
-    "@types/vue": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^7.0.0"
-  },
-  "browserslist": [
-    "last 10 Chrome versions",
-    "last 10 Firefox versions",
-    "last 4 Edge versions",
-    "last 7 Safari versions",
-    "last 8 Android versions",
-    "last 8 ChromeAndroid versions",
-    "last 8 FirefoxAndroid versions",
-    "last 10 iOS versions",
-    "last 5 Opera versions"
-  ],
-  "engines": {
-    "node": ">= 12.22.1",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
-  }
+    "name": "star-wars-quasar",
+    "version": "0.0.1",
+    "description": "Vue3 (typescript) demo application with data from the Star Wars SWAPI api",
+    "productName": "Star Wars App",
+    "author": "Hamilton (hamiltonamx@gmail.com)",
+    "private": true,
+    "scripts": {
+        "lint": "eslint --ext .js,.ts,.vue ./",
+        "test": "echo \"No test specified\" && exit 0"
+    },
+    "dependencies": {
+        "@quasar/extras": "^1.0.0",
+        "axios": "^0.21.1",
+        "core-js": "^3.6.5",
+        "npm": "^7.22.0",
+        "quasar": "^2.0.0",
+        "vue": "^3.2.11"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.13.14",
+        "@quasar/app": "^3.0.0",
+        "@types/node": "^12.20.21",
+        "@types/vue": "^2.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.16.1",
+        "@typescript-eslint/parser": "^4.16.1",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "eslint": "^7.14.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-vue": "^7.0.0"
+    },
+    "browserslist": [
+        "last 10 Chrome versions",
+        "last 10 Firefox versions",
+        "last 4 Edge versions",
+        "last 7 Safari versions",
+        "last 8 Android versions",
+        "last 8 ChromeAndroid versions",
+        "last 8 FirefoxAndroid versions",
+        "last 10 iOS versions",
+        "last 5 Opera versions"
+    ],
+    "engines": {
+        "node": ">= 12.22.1",
+        "npm": ">= 6.13.4",
+        "yarn": ">= 1.21.1"
+    }
 }
